# lazynx

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .markdownlintrc  .mise.toml  Cargo.toml  LICENSE  README.md  bun.lockb  cspell.json  go.work  go.work.sum  nx.json  package.json
.github/workflows/: ci.yml
.husky/: pre-commit
apps/lazynx/: Cargo.toml  project.json
apps/lazynx/src/: action.rs  actions.rs  app.rs  app_status.rs  cli.rs  components.rs  config.rs  consts.rs  errors.rs  main.rs  runner.rs  runner_action_publisher.rs  status.rs  terminal.rs  tui.rs
apps/lazynx/src/.config/: config.json5
apps/lazynx/src/components/: home.rs  status.rs
apps/lazynx/src/shared/: shared.mod.rs
apps/lazynx/src/shared/config/: config.mod.rs  config.rs
apps/lazynx/src/shared/config/utils/: default_config_file.rs  default_data_dir.rs  project_dirs.rs
apps/lazynx/src/shared/errors/: errors.mod.rs  install_color_eyre_panic_hook.rs  install_eyre_hook.rs  install_hooks.rs
apps/lazynx/src/shared/events/: event.rs  event_loop.rs
apps/lazynx/src/shared/logger/: logger.mod.rs  trace_debug.rs
apps/lazynx/src/shared/tui/: tui.rs
apps/lazynx/src/shell/: app_widget.rs  sidebar_widget.rs
apps/lazynx/src/workspace/: workspace.mod.rs  workspace_store.rs  workspace_tab_widget.rs
apps/lazynx/src/workspace/test_utils/: workspace_test_bed.rs  workspace_test_utils.mod.rs
cli/lazynx/: project.json
cmd/lazynx/: go.mod  project.json
libs/shared/actions/: Cargo.toml  project.json
libs/shared/actions/src/: lib.rs
libs/shared/common/: Cargo.toml  project.json
libs/shared/common/src/: action.rs  app_mode.rs  component.rs  event.rs  lib.rs
libs/shared/config/: Cargo.toml  project.json
libs/shared/config/src/: conf_consts.rs  config.rs  dir_utils.rs  keybindings.rs  lib.rs  style.rs
libs/shared/config/src/config_utils/: config_utils.mod.rs  default_config_dir.rs
libs/shared/errors/: Cargo.toml  project.json
libs/shared/errors/src/: errors.rs  install_better_panic.rs  install_color_eyre_panic_hook.rs  install_eyre_hook.rs  install_hooks.rs
libs/shared/events/: Cargo.toml  project.json
libs/shared/events/src/: event.rs  event_loop.rs  events.rs  lib.rs
libs/shared/events/src/streams/: crossterm_stream.rs  key_refresh_stream.rs  render_stream.rs  stream_name.rs  streams.mod.rs  tick_stream.rs
libs/shared/logger/: Cargo.toml  project.json
libs/shared/logger/src/: lib.rs  logger.rs  logger_config.rs
libs/shared/test_utils/: Cargo.toml  project.json
libs/shared/test_utils/src/: lib.rs  widget_test_bed.rs
libs/shared/test_utils/src/mocks/: mock_date.rs  mocks.mod.rs
libs/shared/test_utils/src/snapshots/: test_utils__widget_test_bed__assert_snapshot.snap.new
libs/shared/tui/: Cargo.toml  project.json
libs/shared/tui/src/: action.rs  component.rs  crossterm_channel.rs  errors.rs  event.rs  lib.rs  logger.rs  render_channel.rs  tick_channel.rs  tui.rs  tui_config.rs
libs/shared/tui/src/logger/: logger.rs  logger_config.rs  mod.rs
libs/shared/ui/sidebar/: Cargo.toml  project.json
libs/shared/ui/sidebar/src/: lib.rs  sidebar_component.rs
libs/shared/utils/: Cargo.toml  project.json
libs/shared/utils/src/: cli.rs
libs/shell/: Cargo.toml
libs/shell/src/: app_layout.rs  app_widget.rs  lib.rs  sidebar_component.rs  sidebar_widget.rs
libs/shell/src/snapshots/: shell__app_widget__app_widget_tests__app_widget_render.snap  shell__app_widget__app_widget_tests__sidebar_widget_draw.snap  shell__app_widget__sidebar_widget_tests__sidebar_widget_draw.snap  shell__sidebar_widget__sidebar_widget_tests__sidebar_widget_draw.snap  shell__sidebar_widget__sidebar_widget_tests__sidebar_widget_render.snap
libs/status/: Cargo.toml  project.json
libs/status/src/: lib.rs  status.rs  status_tab.rs  status_tab_component.rs  status_view.rs  status_view_component.rs
libs/test_utils/: Cargo.toml  project.json
libs/test_utils/src/: widget_test_bed.rs
libs/test_utils/src/snapshots/: test_utils__widget_test_bed__assert_snapshot.snap
libs/workspace/: Cargo.toml  project.json
libs/workspace/src/: lib.rs  workspace_store.rs  workspace_tab_widget.rs  workspace_view_widget.rs
libs/workspace/src/snapshots/: workspace__workspace_tab_widget__workspace_tab_widget_tests__draw_widget.snap  workspace__workspace_view_widget__workspace_widget_tests__workspace_view_widget.snap
libs/workspace/src/test_utils/: workspace_test_bed.rs  workspace_test_utils.mod.rs
