[package]
name = "lazynx"
version = "0.1.0"
edition = "2021"
description = "The laziest means of managing your Nx workspace!"
authors = ["Kerick Howlett <8661181+KerickHowlett@users.noreply.github.com>"]

[dependencies]
anyhow = "1.0.93"
better-panic = "0.3.0"
chrono = "0.4.38"
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.31"
human-panic = "2.0.2"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.161"
log = "0.4.22"
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
scopeguard = "1.2.0"
serde = { version = "1.0.211", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.132"
app_config = { path = "../../libs/shared/config" }
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
utils = { path = "../../libs/shared/utils" }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui = { path = "../../libs/shared/tui" }
