[package]
name = "lazynx"
version = "0.1.0"
edition = "2021"
description = "The laziest means of managing your Nx workspace!"
authors = ["Kerick Howlett <8661181+KerickHowlett@users.noreply.github.com>"]

[dependencies]
# Local Dependencies
actions = { path = '../../libs/shared/actions' }
app_config = { path = "../../libs/shared/config" }
errors = { path = "../../libs/shared/errors" }
events = { path = "../../libs/shared/events" }
logger = { path = "../../libs/shared/logger" }
shell = { path = "../../libs/shell" }
tui = { path = "../../libs/shared/tui" }

# Third-Party Dependencies
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
log = "0.4.22"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"

[dev-dependencies]
pretty_assertions = "1.4.1"
test-case = "3.3.1"
tokio = { version = "1.42.0", features = ["test-util"] }
tokio-stream = "0.1.17"
