[package]
name = "shell"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local Dependencies
app_config = { path = "../shared/config" }
common = { path = "../shared/common" }
status = { path = "../status" }

# Third-Party Dependencies
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
