[package]
name = "shell"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local Dependencies
actions = { path = "../shared/actions" }
app_config = { path = "../shared/config" }
workspace = { path = "../workspace" }

# Third-Party Dependencies
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
ratatui = { version = "0.29.0", features = ["serde", "macros"] }

[dev-dependencies]
insta = "1.42.0"
test_utils = { path = "../shared/test_utils" }
