[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
serde = { version = "1.0.211", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
