[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
json5 = "0.4.1"
lazy_static = "1.5.0"
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui = { path = "../tui" }
