[package]
name = "shared_errors"
version = "0.1.0"
edition = "2021"

[dependencies]
better-panic = "0.3.0"
color-eyre = "0.6.3"
libc = "0.2.161"
strip-ansi-escapes = "0.2.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui = { path = "../../tui" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
