[package]
name = "shared_errors"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local Dependencies
tui = { path = "../tui" }

# Third-Party Dependencies
better-panic = "0.3.0"
cfg-if = "1.0.0"
color-eyre = "0.6.3"
human-panic = "2.0.2"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
