[package]
name = "events"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
futures = "0.3.31"
serde = { version = "1.0.211", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.132"
test-case = "3.3.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
tokio-stream = "0.1.17"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.42.0", features = ["test-util"] }
