[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
